lib/brevity/parsing/notes/note.treetop
module Brevity

grammar Note
  include Pitch
  include Accent
  include Link
  include Duration

  rule note
    polyphonic_note / monophonic_note / rest_note
  end

  rule rest_note
    duration:duration <RestNoteNode>
  end
  
  rule monophonic_note
    duration pl:pitch_link acc:(accent)? <MonophonicNoteNode>
  end
  
  rule polyphonic_note
    duration pl:pitch_link more_pitches:("," pl:pitch_link)+ acc:(accent)? <PolyphonicNoteNode>
  end

  rule pitch_link
    pitch the_link:link?
  end
end

end
